Fix import issues and update Navbar component

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -15,8 +15,13 @@
 
 
 /* Logo */
+.logo {
+  margin-left: 15px; /* Ensure gap from the left border */
+  display: flex;
+  align-items: center; /* Vertically center */
+}
 
-.img {
+.logo img {
   width: 70px;
   height: 35px;
 }
