--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,10 +1,12 @@
-.hero {
+
+  .hero {
     width: 100vw;
     height: 270px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 30px;
+    background-color: var(--black-color); /* Replace with the actual color variable or value */
   }
   
   .hero h1 {
