--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,11 @@
   --white-color: #ffffff;
   --black-color: #121212;
 }
-
+body {
+  background-color: var(--black-color);
+  color: var(--white-color);
+  overflow-x: hidden;
+}
 *,
 *::after,
 *::before {
@@ -14,12 +18,6 @@
   font-family: Poppins, sans-serif !important;
 }
 
-body {
-  background-color: var(--black-color);
-  color: var(--white-color);
-  overflow-x: hidden;
-}
-
 hr {
   border: 1px solid var(--primary-color);
 }
@@ -27,7 +25,21 @@ hr {
 .swiper-slide {
   width: auto !important;
 }
+
 .hero {
   z-index: 1000;
   position: relative;
+}
+
+.nav {
+  width: 100vw;
+  height: 75px;
+  background-color: var(--primary-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 30px;
+  position: sticky;
+  top: 0;
+  z-index: 5;
 }
