--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -22,12 +22,12 @@
   cursor: pointer;
   font-size: 14px;
 }
-
 .cardsWrapper {
   margin: 10px 20px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-  gap: 20px; /* Add space between cards */
+  gap: 20px; /* Space between cards */
+  box-sizing: border-box; /* Ensure the total width includes padding and margins */
 }
 
 .expanded {
